[gd_scene load_steps=9 format=2]

[ext_resource path="res://Imagens/1.png" type="Texture" id=1]
[ext_resource path="res://Temas/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/ScriptMenu.gd" type="Script" id=3]
[ext_resource path="res://Fontes/MANDATOR.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 110
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 110
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="FundoMenu" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="LabelMenu" type="Label" parent="."]
margin_left = 853.0
margin_top = 142.0
margin_right = 1823.0
margin_bottom = 433.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Menu"

[node name="LabelPP" type="Label" parent="."]
margin_left = 1678.0
margin_top = 39.0
margin_right = 1876.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Pill  Prompt"

[node name="LabelPP2" type="Label" parent="."]
margin_left = 1014.0
margin_top = 82.0
margin_right = 1212.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Mins"

[node name="LabelPP3" type="Label" parent="."]
margin_left = 802.0
margin_top = 82.0
margin_right = 1000.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Horas"

[node name="ButtonUsers" type="Button" parent="."]
margin_left = 962.0
margin_top = 477.0
margin_right = 1644.0
margin_bottom = 626.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_colors/font_color_hover = Color( 0.752941, 0.917647, 1, 1 )
custom_fonts/font = SubResource( 8 )
enabled_focus_mode = 0
text = "Usu√°rios"
flat = true

[node name="ButtonManager" type="Button" parent="."]
margin_left = 765.0
margin_top = 760.0
margin_right = 1838.0
margin_bottom = 909.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_colors/font_color_hover = Color( 0.752941, 0.917647, 1, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "Gerenciamento"
flat = true

[connection signal="pressed" from="ButtonUsers" to="." method="_on_ButtonUsers_pressed"]
[connection signal="pressed" from="ButtonManager" to="." method="_on_ButtonManager_pressed"]
